2007-12-03  Behdad Esfahbod  <behdad@gnome.org>

	* glib/gnulib/Makefile.am: Fix EXTRA_DIST automake warnings. (#501107)

2007-12-03  Hans Breuer  <hans@breuer.org>

	[start of port to win32/msvc]
	* gcancellable.c : HAVE_UNIST_H and _pipe()
	* gcontenttype.c : only include <dirent.h> in the UNIX branch
	* gdatainputstream.c : pointer arithmetic on void* is a gcc extension
	* gdummyfile.c glocalfileinputstream.c gsimpleasyncresult.c : use 
	HAVE_UNIST_H
	* glocalfileoutputstream.c : use HAVE_UNIST_H and s/ssize_t/gssize/
	* glocalvfs.c : use HAVE_PWD_H
	* gio.symbols : ifdef unix specific functions with G_OS_UNIX
	* makefile.msc : new file (maybe later converted to makefile.msc.in)
	* Makefile.am : added to EXTRA_DIST

2007-12-03  Matthias Clasen  <mclasen@redhat.com>

	* gfile.c (g_file_copy): Add a cross-reference to g_file_dup().
	(#499783)

2007-12-03  Alexander Larsson  <alexl@redhat.com>

        * glocalfileinfo.c:
	Handle OSX style xattrs API (#500506)

2007-12-03  Alexander Larsson  <alexl@redhat.com>

        * gfile.[ch]:
        * glocalfile.c:
	Add G_FILE_COPY_NO_FALLBACK_FOR_MOVE flag

2007-12-02  A. Walton  <awalton@svn.gnome.org>

	* gfile.c:
	* gfileattribute.c:
	Documentation accuracy fixes.

2007-12-01  Behdad Esfahbod  <behdad@gnome.org>

	* gioenumtypes.c.template: Fix typo.

2007-12-01  Matthias Clasen <mclasen@redhat.com>

	* gioenumtypes.c.template: Make threadsafe get_type() functions.

2007-12-01  Matthias Clasen <mclasen@redhat.com>

	* gdirectorymonitor.c:
	* gfilemonitor.c: Add properties

	* gbufferedoutputstream.c: Don't mark buffer-size property 
	as construct-only.

2007-12-01  Matthias Clasen <mclasen@redhat.com>

	* gbufferedoutputstream.c: Add auto-grow property.

2007-11-30  Matthias Clasen <mclasen@redhat.com>

	* *.c: Unify the capitalization of section headings.

2007-11-30  Matthias Clasen <mclasen@redhat.com>

	* gmountoperation.c: Add properties
	
	* gdatainputstream.c: Turn byte-order and newline-type into
	properties.
